--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,15 @@ yarn-error.log*
 
 .idea
 .next
-.yarn
 
 # use yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 package-lock.json
-.yarnrc.yml
 
 # local cache of backend data for syncing
 scripts/localData
