--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 
 # dependencies
 **/node_modules
-**/*.pnp
-**/*.pnp.js
 
 # testing
 **/coverage
@@ -24,6 +22,7 @@ yarn-error.log*
 
 .idea
 .next
+.pnp.*
 
 # use yarn
 .yarn/*
