--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     },
     "packageManager": "yarn@3.2.4",
     "dependencies": {
+        "@contentful/rich-text-react-renderer": "^15.16.2",
+        "@contentful/rich-text-types": "^16.0.2",
         "@fortawesome/fontawesome-svg-core": "^1.2.32",
         "@fortawesome/free-brands-svg-icons": "^5.15.1",
         "@fortawesome/free-solid-svg-icons": "^5.15.1",
