--- a/package.json
+++ b/package.json
@@ -1,61 +1,52 @@
 {
-    "name": "freefrom-map-frontend",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "node server.js",
-        "lint": "eslint --fix components/**/*.js components/*.js constants/**/*.js constants/*.js pages/**/*.js pages/*.js utils/**/*.js utils/*.js",
-        "format": "prettier components/**/*.js components/*.js constants/**/*.js constants/*.js pages/**/*.js pages/*.js utils/**/*.js utils/*.js --write --config ./.prettierrc"
-    },
-    "lint-staged": {
-        "{**/*,**/**/*}.js": [
-            "yarn run lint",
-            "yarn run format"
-        ]
-    },
-    "engines": {
-        "node": "16.16.0",
-        "yarn": "3.2.4"
-    },
-    "packageManager": "yarn@3.2.4",
-    "dependencies": {
-        "@contentful/rich-text-react-renderer": "^15.16.2",
-        "@contentful/rich-text-types": "^16.0.2",
-        "@fortawesome/fontawesome-svg-core": "^1.2.32",
-        "@fortawesome/free-brands-svg-icons": "^5.15.1",
-        "@fortawesome/free-solid-svg-icons": "^5.15.1",
-        "@fortawesome/react-fontawesome": "^0.1.14",
-        "bootstrap": "^4.5.3",
-        "change-case": "^4.1.2",
-        "d3": "3",
-        "express": "^4.17.1",
-        "formik": "^2.2.6",
-        "heroku-ssl-redirect": "^0.1.1",
-        "jquery": "^3.5.1",
-        "next": "^10.0.7",
-        "ordinal": "^1.0.3",
-        "popper.js": "^1.16.1",
-        "prop-types": "^15.8.1",
-        "react": "16.14.0",
-        "react-dom": "16.14.0",
-        "react-ga": "^3.3.0",
-        "slugify": "^1.4.7",
-        "universal-cookie": "^4.0.4"
-    },
-    "devDependencies": {
-        "axios": "^0.27.2",
-        "contentful-management": "^10.12.1",
-        "dotenv": "^16.0.2",
-        "eslint": "^7.17.0",
-        "eslint-config-google": "^0.14.0",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-react": "^7.22.0",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "husky": "^6.0.0",
-        "lint-staged": "^11.0.0",
-        "prettier": "^2.3.0"
-    }
+  "name": "freefrom-map-frontend",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "node server.js",
+    "lint": "eslint --fix components/**/*.js components/*.js constants/**/*.js constants/*.js pages/**/*.js pages/*.js utils/**/*.js utils/*.js",
+    "format": "prettier components/**/*.js components/*.js constants/**/*.js constants/*.js pages/**/*.js pages/*.js utils/**/*.js utils/*.js --write --config ./.prettierrc"
+  },
+  "engines": {
+    "node": "16.16.0"
+  },
+  "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.16.2",
+    "@contentful/rich-text-types": "^16.0.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "bootstrap": "^4.5.3",
+    "change-case": "^4.1.2",
+    "d3": "3",
+    "express": "^4.17.1",
+    "formik": "^2.2.6",
+    "heroku-ssl-redirect": "^0.1.1",
+    "jquery": "^3.5.1",
+    "next": "^10.0.7",
+    "ordinal": "^1.0.3",
+    "popper.js": "^1.16.1",
+    "prop-types": "^15.8.1",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-ga": "^3.3.0",
+    "slugify": "^1.4.7",
+    "universal-cookie": "^4.0.4"
+  },
+  "devDependencies": {
+    "axios": "^0.27.2",
+    "contentful-management": "^10.12.1",
+    "dotenv": "^16.0.2",
+    "eslint": "^7.17.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.8.4"
+  }
 }
