--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.0.2",
     "eslint": "^7.17.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.22.0",
