Auto-color states in watchlist

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-ga": "^3.3.0",
+    "react-svg": "^16.1.5",
     "slugify": "^1.4.7",
     "universal-cookie": "^4.0.4"
   },
